# MCC

./: CMakeLists.txt  LICENSE  README.md  __init__.py  build.cmd  build.sh  encryption.py  hashing.py  keygen.py  setup.py  utils.py
examples/: example.py  genparams.py  hardwareaccelleration.py  keyexchange.py  keypair.py  mcc_private_key.pem  mcc_public_key.pem  mcc_server.py  optimizer.py  testkeys.py
mcc/: __init__.py  core.py  encryption.py  hardwareaccelleration.py  keyexchange.py  keygen.py  private_key1.pem  public_key1.pem  signature.py
src/: CMakeLists.txt  Makefile  cmake_install.cmake  mfc.c  mfc.h
test/: CMakeLists.txt  test.c
util/: plot.py
